增加文字消息提示

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 <div id="call-page" class="page">
 	<video id="yours" autoplay></video>
 	<video id="theirs" autoplay></video>
-	<input type="text" id="their-username" />
+	<input type="text" placeholder="输入要连接的用户名" id="their-username" />
 	<button id="call">Call 用户名</button>
 	<button id="hang-up">Hang Up 挂断</button>
 
-	<input  type="text" id="message"></input>
+	<input  type="text" placeholder=“发送消息（呼叫成功后可发送）” id="message"></input>
 	<button id="send">Send 发送消息</button>
 	<div id="received"></div>
 </div>
